Fix sizing on small screen.

--- a/phyt-theme/assets/styles/components/_nodes.scss
+++ b/phyt-theme/assets/styles/components/_nodes.scss
@@ -1,10 +1,10 @@
 // source: https://stackoverflow.com/a/30038170/2223106
 .node  {
-    width: 6em;
-    height: 6em;
+    width: 3.2rem;
+    height: 3.2rem;
     border-radius: 50%;
 
-    font-size: .7em;
+    font-size: .5rem;
     margin:0 auto;
     text-align: center;
     position: relative;
